Estrutura de movimentação

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <div class="tela" id="tela_1">
-
+    <div class="tela" id="tela_1">        
         <div id="boneco"></div>
+        <div class="plataformas" id="plataforma_1"></div>
+        <div class="plataformas" id="plataforma_2"></div>
     
     </div>
     
