--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="boneco"></div>
         <div class="plataformas" id="plataforma_1"></div>
         <div class="plataformas" id="plataforma_2"></div>
+        <div class="inimigos" id ="inimigo_1"></div>
     
     </div>
     
